Modify excel functions